k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: raffle-platform
  labels:
    name: raffle-platform
    environment: production
